--- a/JavaScript/blackjack/index.html
+++ b/JavaScript/blackjack/index.html
@@ -7,8 +7,8 @@
         <p id="message-el">Want to play a round?</p>
         <p id="cards-el"></p>
         <p id="sum-el"></p>
-        <button onclick="startGame()">START GAME</button>
-        <button onclick="newCard()">NEW CARD</button>
+        <button id="startBtn">START GAME</button>
+        <button id ="newCardBtn">NEW CARD</button>
         <p id="player-el"></p>
         <script src="index.js"></script>
     </body>
